добавил мидл веар, который отслеживает залогинен ли пользователь. добавил новую ошибку. доделал авторизацию
